# mulletwebhook

./: .gitignore  README.md  config.html  config.js  config.txt  package.json  panel.html  panel.js  theme.css
.github/workflows/: docker-build.yml  run-eslint.yml  zipfile.build.yml
ebs/: Dockerfile  pyproject.toml  tox.ini
ebs/mulletwebhook/: __init__.py  __main__.py  config.py  init_db.py  twitch.py  utils.py  verify.py
ebs/mulletwebhook/main/: routes.py
ebs/mulletwebhook/models/: broadcaster.py  element.py  enums.py  layout.py
ebs/mulletwebhook/templates/: confirm_delete_form.html  element_form.html  image_form.html  layout.html  layout_form.html  select_layout_form.html  text_form.html  webhook_form.html
frontend/: config.html  config.js  globals.js  panel.html  panel.js  theme.css
scripts/: add_bits_products.py  add_test_data.py  install_js_deps.sh  package_frontend.sh
